wrap height fix

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body{
 }
 
 #wrap{
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     max-width: 450px;
     margin: 0 auto;
